test/parser/Queries/syntax_errors/fail_K-ForExprWithout-24.xq
(:********* where ** let ** $ *************** eq ***** $ ****** $ ****** $ * $ ****:)
 for (:  $ Test: K-ForExprWithout-24             let   $       foo    where       :)
(: Written by: Frans Englich      foo        foo               )
 where (:  ne  2006-10-05T18:29:37+02:00   ne                     eq   :) eq (: $  Purpose: A where  test let whose essence  `( $fn:name  (1, 1)return $fn:name) instance of xs:integer+`. :)
(:********* ne ************ where ***************** $ *** where ************:)
(for $fn:namein (1, 1) return $fn:name) instance of xs:integer+